2001-12-13  Leonard Rosenthol  <leonardr@lazerware.com>
	* Added new composite operators to support PSD/XCF layer compositing
		  NoCompositeOp,
		  DarkenCompositeOp,
		  LightenCompositeOp,
		  HueCompositeOp,
		  SaturateCompositeOp,
		  ValueCompositeOp,
		  ColorizeCompositeOp,
		  LuminizeCompositeOp,
		  ScreenCompositeOp,
		  OverlayCompositeOp
	* Modified the PSD coder to set the appropriate composite operator
	* Modified the XCF coder to set the appropriate composite operator

2001-12-09  Leonard Rosenthol  <leonardr@lazerware.com>
	* Added new member to ImageInfo: flatten.   Used by
	  PSD and XCF to determine whether to flatten an image when read.
	* PSD and XCF now respect image_info->flatten.
	* Fixed bug in XCF loader when loading layered image as layers.
	* Modified the convert program to set image_info->flatten
	  if -flatten is specified; we still call FlattenImages for
	  other formats that don't respect image_info->flatten.
	* Modified Magick++'s Image class to support image_info->flatten

2001-12-08  Leonard Rosenthol  <leonardr@lazerware.com>
	* Improvements to the Photoshop (PSD) coder:  1) added support
	  for Duotone images loaded as grayscale as per PSD docs;  and
	  2) added option to composite layers when reading respects layer
	  visibility setting
		
2001-12-07  Cristy  <cristy@mystic.es.dupont.com>
	* -dissolve wasn't working for the composite program (thanks to
	  Rick Manbry).
	* DCM coder failed to read a valid DCM image file.

2001-12-06  Cristy  <cristy@mystic.es.dupont.com>
	* Stream buffer was not being freed in ReadStream().

2001-12-05  Cristy  <cristy@mystic.es.dupont.com>
	* Corrected bias when downsizing an image with ResizeImage().

2001-11-25  Cristy  <cristy@mystic.es.dupont.com>
	* AcquireImagePixels() can accept (x,y) outside the image area
	  (e.g. AcquireImagePixels(image,-3,-3,7,7,exception)).

2001-11-22  Cristy  <cristy@mystic.es.dupont.com>
	* Added limited SVG gradient support.
