@@ -1,3 +1,7 @@
+2001-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/wmf.c : Added native BLOB support.
+
 2001-12-13  Leonard Rosenthol  <leonardr@lazerware.com>
 	* Added new composite operators to support PSD/XCF layer compositing
 		  NoCompositeOp,
